--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,9 +7,36 @@
   "background_color": "#E8F4F8",
   "theme_color": "#B8E0F2",
   "orientation": "portrait-primary",
-  "icons": [],
+  "icons": [
+    {
+      "src": "/icon-192.png.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/apple-touch-icon.png.svg",
+      "sizes": "180x180",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    }
+  ],
   "categories": ["productivity", "utilities", "education"],
   "screenshots": [],
-  "shortcuts": []
+  "shortcuts": [
+    {
+      "name": "Favorites",
+      "short_name": "Favorites",
+      "description": "View your favorite AI tools",
+      "url": "/?tab=favorites",
+      "icons": [{ "src": "/icon-192.png.svg", "sizes": "192x192", "type": "image/svg+xml" }]
+    }
+  ]
 }
 
