--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "check-links": "node scripts/check-urls.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
