--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dompurify": "^3.3.0",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
