--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "dompurify": "^3.3.0",
+    "firebase": "^12.6.0",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
