chore: update Firebase config, workflow environment, and secrets setup

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    environment: default
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
