Refactor: Migrate to Monorepo with Backend (Express/Supabase) and Frontend (React)

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -20,8 +20,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        working-directory: frontend
 
       - name: Create .env file
+        working-directory: frontend
         run: |
           echo "VITE_FIREBASE_API_KEY=${{ secrets.VITE_FIREBASE_API_KEY }}" >> .env
           echo "VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}" >> .env
@@ -33,6 +35,7 @@ jobs:
 
       - name: Build project
         run: npm run build
+        working-directory: frontend
 
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
@@ -41,3 +44,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AI_HUBX }}'
           channelId: live
           projectId: 'aihubx'
+          entryPoint: frontend
