--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@supabase/supabase-js": "^2.89.0",
     "dompurify": "^3.3.0",
     "firebase": "^12.6.0",
     "framer-motion": "^10.16.16",
