--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^6.30.2"
+    "react-router-dom": "^6.30.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
@@ -38,6 +39,7 @@
     "jsdom": "^27.1.0",
     "prop-types": "^15.8.1",
     "vite": "^7.2.2",
+    "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.8"
   }
 }
